# game-engine

./: .gitignore  Cargo.toml  ConvertAudio.md  README.md  ShaderHotReloading.md
assets/sounds/: bam 1.aif  click 1.aif  click 2.aif  click 3.aif  exp 1.aif  exp 2.aif  exp 3.aif  exp 4.aif  exp 5.aif  exp 6.aif  exp 7.aif  exp 8.aif  exp 9.aif  exp tail 1.aif  exp tail 2.aif  missile.aif  missile.aif.asd  reload.aif
assets/sounds/unsorted/cannon/: 35-Audio 0001 [2025-04-15 191224].aif  35-Audio 0001 [2025-04-15 191224].aif.asd  35-Audio 2 0003 [2025-04-15 191343].aif  35-Audio 2 0003 [2025-04-15 191343].aif.asd  35-Audio 2 0003 [2025-04-15 191734].aif  35-Audio 2 0003 [2025-04-15 191734].aif.asd  35-Audio 2 0004 [2025-04-15 191906].aif  35-Audio 2 0004 [2025-04-15 191906].aif.asd  35-Audio 2 0005 [2025-04-15 191924].aif  35-Audio 2 0005 [2025-04-15 191924].aif.asd  35-Audio 2 0006 [2025-04-15 191945].aif  35-Audio 2 0006 [2025-04-15 191945].aif.asd  35-Audio 2 0007 [2025-04-15 191954].aif  35-Audio 2 0007 [2025-04-15 191954].aif.asd  35-Audio 2 0008 [2025-04-15 192003].aif  35-Audio 2 0008 [2025-04-15 192003].aif.asd  35-Audio 2 0009 [2025-04-15 192027].aif  35-Audio 2 0009 [2025-04-15 192027].aif.asd  35-Audio 2 0010 [2025-04-15 192037].aif  35-Audio 2 0010 [2025-04-15 192037].aif.asd  (+12 more)
src/: app.rs  apply_bloom.wgsl  atmosphere.rs  atmosphere.txt  atmosphere.wgsl  atmosphere_wgpu_ctx.rs  audio_converter.rs  barebones.wgsl  bloom.rs  bloom.wgsl  bloom_horizontal.txt  bloom_horizontal.wgsl  bloom_mip.txt  bloom_mip.wgsl  bloom_mip_old.txt  bloom_vertical.txt  bloom_vertical.wgsl  buff.rs  buff.wgsl  camera.rs  clouds.wgsl  color_correction.rs  color_correction.wgsl  components.rs  entity.rs  final.wgsl  force_feedback.rs  imgui_state.rs  input.rs  kinda_clouds.wgsl  main.rs  model.rs  old_main.rs  old_voxels.wgsl  post_processing.rs  post_processing.wgsl  prompt.txt  shader.rs  shader.txt  shadertoy_ref.txt  (+23 more)
src/shaders/: atmosphere.wgsl  barebones.wgsl  bloom.wgsl  color_correction.wgsl  entity.wgsl  final_conversion.wgsl  new_atmosphere.wgsl  old_atmosphere.wgsl  old_voxels.wgsl  sky.wgsl  sky_clouds v1.wgsl  sky_clouds v2.wgsl  sky_clouds v3.wgsl  sky_clouds v4.wgsl  taa.wgsl  taa_fxaa.wgsl  voxel.wgsl  voxels_dev.wgsl
trash/: voxels.rs  voxels.wgsl
(+94 files in other folders)
