[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.7", features = ["serde"] }
wgpu = "24.0.1"
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
image = "0.25.5"
env_logger = "0.11.6"
log = "0.4"
hecs = "0.10"
cgmath = "0.18"
gltf = "1.4"
imgui-wgpu = { path = "lib/imgui-wgpu-rs" }
imgui = "0.12"
imgui-winit-support = "0.13"
rustfft = "6.1.0"
rapier2d = { version = "0.23.1", features = ["simd-stable"] }
nalgebra = "0.33.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
# gilrs = { version = "0.11", default-features = false, features = [
#     "xinput", "serde-serialize"
# ] } # works with xbox controllers
gilrs = { path = "./lib/gilrs/gilrs", features = [
    "serde-serialize",
] } # works with ps controllers  
rodio = "0.17.1"
cpal = "0.15.2"
